src/objects/LG_FraudCheck__c.object
<CustomObject>
    <description>InitiateFraudCheckResponse</description>
    <fields>
        <fullName>Fraud_Record_Identifier_Fraud_Record_ID__c</fullName>
        <label>Fraud Record Identifier (Fraud Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountID__c</fullName>
        <formula>LG_Opportunity__r.Account.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Fraud Check</relationshipLabel>
        <relationshipName>Fraud_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_DashboardAdminChecksIndicator__c</fullName>
        <formula>IF( OR(ISPICKVAL(  LG_DashboardAdminChecksStatus__c ,&apos;Completed&apos;),ISPICKVAL(  LG_DashboardAdminChecksStatus__c ,&apos;Completed With Blocking Icon&apos;)), (IMAGE(&quot;/resource/GREEN&quot;, &quot;Red&quot;,30,30)), IF( ISPICKVAL( LG_DashboardAdminChecksStatus__c,&apos;Pending&apos;), (IMAGE(&quot;/resource/AMBER&quot;, &quot;Red&quot;,30,30)), (IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;,30,30))))</formula>
        <label>Dashboard Admin Checks Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DashboardAdminChecksStatus__c</fullName>
        <description>This field is updated based on fraud check matrix</description>
        <label>Dashboard Admin Checks Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed With Blocking Icon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_FraudCheckDate__c</fullName>
        <label>Fraud Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_FraudMatrixKey__c</fullName>
        <formula>LG_fraudResponseCode__c+LG_fraudStatusCode__c+LG_statusCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud Matrix Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudNeuralScoreResponse__c</fullName>
        <label>Fraud Neural (Score) Response</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudRuleCategoryFlagResponse__c</fullName>
        <label>Fraud Rule Category Flag Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_FraudUseCodeResponse__c</fullName>
        <label>Fraud Use Code Response</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MitigationPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mitigation Payment</label>
        <referenceTo>LG_Customer_Payment__c</referenceTo>
        <relationshipLabel>Fraud Check</relationshipLabel>
        <relationshipName>Fraud_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityOwner__c</fullName>
        <formula>LG_Opportunity__r.Owner.Id</formula>
        <label>Opportunity Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fraud Check</relationshipLabel>
        <relationshipName>Fraud_Check</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_ResponseCodeAuthorizationResponse__c</fullName>
        <label>Response Code (Authorization Response)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_StandaloneFraudCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standalone Fraud Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type_of_Mitigation_Payment__c</fullName>
        <label>Type of Mitigation Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>BACS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_fraudAssessmentReference__c</fullName>
        <label>Fraud Assessment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_fraudResponseCode__c</fullName>
        <label>Fraud Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_fraudResponseDescription__c</fullName>
        <label>Fraud Response Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_fraudStatusCode__c</fullName>
        <label>Fraud Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_sourceSystemCode__c</fullName>
        <label>Source System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_sourceSystemDetail__c</fullName>
        <label>Source System Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_sourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_statusCodeDescription__c</fullName>
        <label>Status Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_statusCode__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fraud Check</label>
    <nameField>
        <label>Fraud Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud Check</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>